crates/keron-lang/tests/corpus/errors/check/struct_missing_required_arg.keron
struct Point { x: Int, y: Int }

val p: Point = Point { x: 0 }
